Refactor, remove commented code, add todos for ok-384